--- a/MPHPickerExample/Info.plist
+++ b/MPHPickerExample/Info.plist
@@ -15,11 +15,13 @@
 					<string>Default Configuration</string>
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
-					<key>UISceneStoryboardFile</key>
-					<string>Main</string>
 				</dict>
 			</array>
 		</dict>
 	</dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>MPHPicker Example</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>MPHPicker Exmaple</string>
 </dict>
 </plist>
